--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="app-container">
         <div class="app-header">
-            <h1 class="app-title"><i class="far fa-calendar-check me-2"></i>Todo Calendar</h1>
+            <h1 class="app-title"><i class="far fa-calendar-check me-2"></i>To-do Calendar</h1>
             <div class="notification-bell" id="notificationBell">
                 <i class="fas fa-bell"></i>
                 <span class="notification-badge" id="notificationBadge">0</span>
